# ROS-sim

./: README.md  client.py  server  server.cpp
catkin_ws/: rospy
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  ContactState.h  DeleteLightResponse.h  GetJointPropertiesRequest.h  GetLightPropertiesRequest.h  GetLightPropertiesResponse.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetModelPropertiesResponse.h  GetModelStateResponse.h  GetPhysicsPropertiesRequest.h  ModelState.h  ODEJointProperties.h  SetJointPropertiesRequest.h  SetJointTrajectoryRequest.h  SetLightPropertiesRequest.h  SetLightPropertiesResponse.h  SetLinkPropertiesResponse.h  SetLinkStateResponse.h  SetModelConfigurationResponse.h  SpawnModelRequest.h  SpawnModelResponse.h
catkin_ws/devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/gazebo_plugins/: camera_synchronizer  (+2 more)
catkin_ws/install/: setup.sh
catkin_ws/install/share/my_bot/: package.xml
catkin_ws/install/share/my_bot/config/: diffdrive.yaml
catkin_ws/install/share/my_bot/launch/: bot_control.launch  gazebo.launch  rtabmap.launch
catkin_ws/install/share/my_bot/urdf/: bot.gazebo  bot.urdf  bot.xacro
catkin_ws/src/navig/: CMakeLists.txt
(+167 files in other folders)
